test/cases/compile_errors/comptime_coercing_int_error_union_doesnt_crash.zig
const x = 0;
comptime {
    x += foo();
}

fn foo() !usize {
    return 0;
}

// error
//
// :3:13: error: expected type 'comptime_int', found 'error{}!usize'
